Fix overflow n stuffs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ a {
 --------------------------------------------------------------*/
 .hero {
 	width: 100%;
-	height: 100vh;
+	height: 90vh;
 }
 
 .hero h1 {
@@ -214,30 +214,30 @@ a {
 .hero .hero-img {
 	text-align: right;
 }
+
 .cta-btn-container {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 }
+
 .cta-btn-container > * {
 	margin: 20px 0.3rem;
 }
+
 .text-gray {
 	color: #9b9b9b;
 }
+
 a.text-gray {
 	font-weight: 500;
 	text-decoration: underline;
 	transition: all 0.1s ease-out;
 }
+
 a.text-gray:hover {
 	color: #9b9b9b;
 	font-weight: 600;
-}
-@media (min-width: 1024px) {
-	.hero {
-		background-attachment: fixed;
-	}
 }
 
 @media (max-width: 991px) {
